WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
218468
Regression(
r269227
) imported/w3c/web-platform-tests/service-workers/service-worker/referrer-toplevel-script-fetch.https.html is a flaky crash
https://bugs.webkit.org/show_bug.cgi?id=218468
Summary
Regression(r269227) imported/w3c/web-platform-tests/service-workers/service-w...
Chris Dumez
Reported
2020-11-02 16:16:16 PST
imported/w3c/web-platform-tests/service-workers/service-worker/referrer-toplevel-script-fetch.https.html is a flaky crash since
r269227
.
Attachments
Patch
(2.47 KB, patch)
2020-11-02 16:19 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(2.45 KB, patch)
2020-11-02 16:42 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2020-11-02 16:16:26 PST
<
rdar://problem/70969071
>
Chris Dumez
Comment 2
2020-11-02 16:19:33 PST
Created
attachment 412986
[details]
Patch
Darin Adler
Comment 3
2020-11-02 16:40:38 PST
Comment on
attachment 412986
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=412986&action=review
> Source/WebCore/workers/service/ServiceWorkerContainer.cpp:116 > + auto* context = scriptExecutionContext(); > + if (!context) > + return; > + > + auto registration = ServiceWorkerRegistration::getOrCreate(*context, *this, WTFMove(registrationData));
Not sure this needs a blank line.
Chris Dumez
Comment 4
2020-11-02 16:42:30 PST
Created
attachment 412988
[details]
Patch
EWS
Comment 5
2020-11-02 17:15:19 PST
Committed
r269281
: <
https://trac.webkit.org/changeset/269281
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 412988
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug