Regression(r269227) imported/w3c/web-platform-tests/service-workers/service-worker/referrer-toplevel-script-fetch.https.html is a flaky crash https://bugs.webkit.org/show_bug.cgi?id=218468 <rdar://problem/70969071>

Reviewed by Darin Adler.

Code in ServiceWorkerContainer::ready() was queueing an event loop task and then dereferencing
scriptExecutionContext() in the task. This is no longer safe after r269227 since tasks may
still be run after ActiveDOMObjects have been stopped. To address the issue, we need to
null check the scriptExecutionContext.

No new tests, covered by existing test.

* workers/service/ServiceWorkerContainer.cpp:
(WebCore::ServiceWorkerContainer::ready):


Canonical link: https://commits.webkit.org/231132@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@269281 268f45cc-cd09-0410-ab3c-d52691b4dbfc